# linuxtips_dundie-rewards-project

./: Makefile  README.md  pyproject.toml  requirements.dev.txt  requirements.test.txt  setup.py
.github/workflows/: main.yml
docs/: documentation.md
dundie/: __main__.py  cli.py  core.py
integration/: info.txt  test_load.py
tests/: conftest.py  constants.py  contants.py  test_load.py
tests/assets/: people.csv
